fix scrollbar issue on breakpoint

--- a/scss/general/_base.scss
+++ b/scss/general/_base.scss
@@ -11,7 +11,7 @@ html {
   width: 1352px;
   height: 100%;
   margin: 0 auto;
-  @media (max-width: 1352px) {
+  @media (max-width: 1382px) {
     width: 100%;
     padding: 0 15px;
   }
